--- a/SPOC-Direct/public/css/navCSS.css
+++ b/SPOC-Direct/public/css/navCSS.css
@@ -358,7 +358,101 @@ section {
     /*background-color: #2e6e9e;*/
 }
 
-.footer{
+/*.footer{*/
+/*    background-color: white;*/
+/*    min-height: calc(30vh - 40px);*/
+/*}*/
+.ftUl {
+    list-style-image: image("../img/default.png");
+}
+
+footer {
+    margin-top: 80px;
     background-color: white;
-    min-height: calc(30vh - 40px);
+
+    padding: 80px 0px 70px 0px;
+    border-top: 1px solid #ddd;
+}
+
+footer .footer-heading h4 {
+    font-size: 21px;
+    color: #232323;
+    letter-spacing: 0.5px;
+    margin-top: 15px;
+    margin-bottom: 40px;
+}
+
+
+footer .about-veno .logo {
+    margin-bottom: 40px;
+}
+
+footer .about-veno ul li a {
+    width: 32px;
+    height: 32px;
+    display: inline-block;
+    text-align: center;
+    line-height: 32px;
+    background-color: #cdcdcd;
+    border-radius: 50%;
+    font-size: 15px;
+    color: #fff;
+    margin-right: 3px;
+    transition: all 0.5s;
+}
+
+footer .about-veno p {
+    margin-bottom: 25px;
+}
+
+footer .about-veno ul li a:hover {
+    background-color: #4883ff;
+}
+
+footer .useful-links ul li {
+    margin-bottom: 12px;
+}
+
+footer .useful-links ul li a {
+    font-size: 15px;
+    color: #7a7a7a;
+    letter-spacing: 0.5px;
+    text-decoration: none;
+    transition: all 0.5s;
+}
+
+footer .useful-links ul li a:hover {
+    color: #4883ff;
+}
+
+footer .useful-links ul li i {
+    color: #4883ff;
+    font-size: 6px;
+    position: relative;
+    top: -3px;
+    margin-right: 8px;
+}
+
+footer .contact-info p {
+    margin-bottom: 25px;
+}
+
+footer .contact-info ul li {
+    margin: 10px 0px;
+}
+
+footer .contact-info ul li span {
+    font-size: 13px;
+    color: #7a7a7a;
+    font-weight: 600;
+    letter-spacing: 0.3px;
+    width: 80px;
+    display: inline-block;
+}
+
+footer .contact-info ul li a {
+    font-size: 13px;
+    color: #4883ff;
+    letter-spacing: 0.5px;
+    text-decoration: none;
 }
